# PassphraseToSecret

./: CMakeLists.txt  README.md
include/: password-secret.h
lib/: derive.c
tools/: pwkeygen.c
